Fix horizontal spacing on sponsor box

--- a/assets/scss/7-pages/_index.scss
+++ b/assets/scss/7-pages/_index.scss
@@ -89,6 +89,10 @@
     background-color: brand-color('primary');
   }
 
+  &__sponsors {
+    padding: $space-small $h-unit;
+  }
+
   &__faq {
     padding: $space-large $h-unit;
     background-color: neutral-color('lower');
